--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -97,10 +97,10 @@
                         <div class="profile-dropdown">
                             <a href="{% url 'profile' user.username %}">
                                 {% if user.userprofile.profile_picture %}
-                                    <img src="{{ user.userprofile.profile_picture|safe }}" class="profile-img" alt="{{ user.username }}">
-                                {% else %}
-                                    <img src="{% static 'projects/images/default-profile.png' %}" class="profile-img" alt="{{ user.username }}">
-                                {% endif %}
+                                <img src="{{ user.userprofile.profile_picture|safe }}" alt="{{ user.username }}" class="network-profile-img">
+                            {% else %}
+                                <img src="https://via.placeholder.com/100" alt="{{ user.username }}" class="network-profile-img">
+                            {% endif %}
                             </a>
                             <div class="dropdown-content">
                                 <a href="{% url 'edit_profile' %}" class="dropdown-button">Edit Profile</a>
