--- a/projects/static/projects/styles.css
+++ b/projects/static/projects/styles.css
@@ -1080,7 +1080,7 @@ textarea::placeholder {
 
 .notification-list li {
     padding: 10px;
-    background-color: #444;
+    background-color: #fafafa;
     border-radius: 5px;
     display: flex;
     align-items: center;
